--- a/coffee.html
+++ b/coffee.html
@@ -166,8 +166,9 @@
                 <a href="">Terms</a>
                 <a href="">Careers</a>
            </div>
+           
        </div>
-       <div class="enddiv d1">
+       <div class="enddiv d1 d2">
            <div id="fin">
             <a href=""><i class="fa-brands fa-twitter"></i></a>
             <a href=""><i class="fa-brands fa-facebook"></i></a>
